--- a/Index.html
+++ b/Index.html
@@ -18,7 +18,7 @@
 <!-- header section starts -->
 <header class="header">
 
-     <a href="#" class="logo"> <span>Khi</span>Wheels </a>
+     <a href="#" class="logo"> <span>Max</span>Wheels </a>
 
     <nav class="navbar">
         <a href="#home">home</a>
